[gd_scene load_steps=9 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2BuffBabyTransparent.png" type="Texture" id=1]
[ext_resource path="res://Babies/BuffBaby.gd" type="Script" id=2]
[ext_resource path="res://Weapons/BiggerShot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/BabyTechMultiShot.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.00001
height = 7.24999

[sub_resource type="Animation" id=2]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 35.5 )

[node name="BuffBaby" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12, 24, 12, 24, 8, -16, 0, -24, -8, -16 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomHand" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="TopHand" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="BiggerShot" parent="TopHand" instance=ExtResource( 3 )]
position = Vector2( 0, -2 )

[node name="Area2D" type="Area2D" parent="TopHand"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopHand/Area2D"]
position = Vector2( 7, 0 )
rotation = 17.2788
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BabyTechMultiShot" parent="TopHand" instance=ExtResource( 4 )]
show_behind_parent = true
position = Vector2( 13, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stationary"
anims/Stationary = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="ThunderFistTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -10.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="TopHand/Area2D" to="." method="_on_ThunderFist_body_entered"]
[connection signal="timeout" from="ThunderFistTimer" to="." method="_on_ThunderFistTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
